--- a/package.json
+++ b/package.json
@@ -15,27 +15,27 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "core-js": "^3.15.1",
+    "nuxt": "^2.15.7",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
-    "core-js": "^3.15.1",
-    "lodash": "^4.17.21",
-    "nuxt": "^2.15.7"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
     "@babel/eslint-parser": "^7.14.7",
     "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.14.8",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/style-resources": "^1.2.1",
-    "autoprefixer": "^10.2.5",
-    "babel-eslint": "^10.1.0",
     "eslint": "^7.29.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "express": "^4.17.1",
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.8",
+    "autoprefixer": "^10.2.5",
+    "babel-eslint": "^10.1.0",
     "postcss": "^8.2.8",
     "postcss-loader": "^4.2.0",
     "sass": "^1.37.0",
