--- a/package.json
+++ b/package.json
@@ -1,44 +1,51 @@
 {
-  "name": "movie-app-nuxt",
+  "name": "nuxt-movie-app",
   "version": "1.0.0",
   "private": true,
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "npm run lint:js"
+    "test:unit": "jest --watchAll",
+    "test:unit:silent": "jest --watchAll --silent",
+    "test:e2e": "cypress open",
+    "test:e2e:headless": "cypress run"
   },
-  "browsersList": [
-    "> 1%",
-    "last 2 versions"
-  ],
   "dependencies": {
-    "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.2",
-    "lodash": "^4.17.21"
+    "bootstrap": "^5.0.0-beta3",
+    "core-js": "^3.9.1",
+    "lodash": "^4.17.21",
+    "nuxt": "^2.15.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.14.7",
-    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
     "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/eslint-config": "^6.0.1",
-    "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/style-resources": "^1.2.1",
-    "eslint": "^7.29.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.12.1",
-    "express": "^4.17.1",
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.14.8",
+    "@nuxtjs/style-resources": "^1.0.0",
+    "@vue/test-utils": "^1.2.0",
     "autoprefixer": "^10.2.5",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
+    "cypress": "^7.2.0",
+    "eslint": "^7.22.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-vue": "^7.8.0",
+    "express": "^4.17.1",
+    "jest": "^26.6.3",
     "postcss": "^8.2.8",
     "postcss-loader": "^4.2.0",
-    "sass": "^1.37.0",
-    "sass-loader": "^10.1.1"
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
+    "vue-jest": "^3.0.7"
   }
 }
